opam-version : "2.0"
name         : "GetoptLib"
version      : "1.0"
synopsis     : "An implementation of GNU getopt for OCaml projects"
description  : "The OCaml distribution comes with the module Arg specialized in
command-line parsing. However, it doesn't support the well known
features of GNU getopt and getopt_long. The module Getopt is an alternative; it supports GNU syntax, but from the programmer point of view, it is close to the spirit of Arg: the programmer gives to the general parsing function a list of possible options, together with the behaviour of these options."
maintainer   : "Christian Rinderknecht <rinderknecht@free.fr>"
authors      : "Alain Frisch"
homepage     : "https://github.com/rinderknecht/GetoptLib"
bug-reports  : "https://github.com/rinderknecht/GetoptLib/issues"
dev-repo     : "git+https://github.com/rinderknecht/GetoptLib.git"
license      : "MIT"

# If you change the dependencies, run `opam lock` in the root
depends      : ["dune"]
build        : [[ "dune" "build" "-p" name]]

url {
  src: "https://github.com/rinderknecht/GetopLib/-/archive/master/GetoptLib.tar.gz"
}
